--- a/src/styles/Signin.module.scss
+++ b/src/styles/Signin.module.scss
@@ -18,21 +18,34 @@
   }
 }
 
-.signin {
+.signin,
+.success,
+.cardWrapper {
   margin: 0;
+  position: relative;
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.signin {
+  // margin: 0;
   background: linear-gradient(
       rgba(255, 255, 255, 0.1),
       rgba(255, 255, 255, 0.1)
     ),
     url("/assets/images/landing/landing_bg.jpg") fixed no-repeat center;
-  position: relative;
-  background-size: cover;
-  min-height: 100vh;
+  // position: relative;
+  // background-size: cover;
+  // min-height: 100vh;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: flex-start;
+  // align-items: center;
 
   .card {
     width: 50%;
@@ -78,4 +91,29 @@
     border: 1px solid #5e5e5e;
     border-radius: 4px;
   }
+}
+
+.cardWrapper {
+  width: 100%;
+}
+
+.success {
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.25) !important;
+}
+
+.successPopup {
+  z-index: 1000;
+  color: #555555;
+  background-color: #ffffff;
+  text-align: center;
+  width: 320px;
+  height: 140px;
+  padding: 35px 50px;
+  border-radius: 6px;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+  box-shadow: 2px 5px 7px 3px rgba(0, 0, 0, 0.3);
 }
