--- a/src/styles/category.module.scss
+++ b/src/styles/category.module.scss
@@ -4,21 +4,14 @@
   justify-content: space-between;
   margin-top: 15px;
   margin-bottom: 15px;
-}
 
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  height: 100vh;
-  margin-right: 15px;
-
-  .cardMedia {
-    width: 100%;
-    height: auto;
-  }
-
-  .actions {
-    justify-content: center;
-  }
+  // margin: 0;
+  // background: linear-gradient(
+  //     rgba(255, 255, 255, 0.1),
+  //     rgba(255, 255, 255, 0.1)
+  //   ),
+  //   url("/assets/images/backgound/horoscope_bg.jpg") fixed repeat center;
+  // position: relative;
+  // background-size: cover;
+  // min-height: 100vh;
 }
