--- a/src/styles/ProductInfo.module.scss
+++ b/src/styles/ProductInfo.module.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 
 .layout {
-  margin: 15px;
+  margin: 15px 15px 100px;
   // margin: 0;
   // background: linear-gradient(
   //     rgba(255, 255, 255, 0.1),
