--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -99,6 +99,13 @@ button {
   padding-bottom: 0px !important;
 }
 
+// Loading Icon
+.MuiCircularProgress-colorPrimary {
+  color: #bbbbbb !important;
+  width: 20px !important;
+  height: 20px !important;
+}
+
 .DayPicker-wrapper {
   padding-bottom: 0px !important;
   border-radius: 4px !important;
