--- a/src/styles/Checkout.module.scss
+++ b/src/styles/Checkout.module.scss
@@ -61,6 +61,10 @@
       background-color: #000;
       font-size: 16px;
       margin-right: -20px;
+
+      &:disabled {
+        cursor: not-allowed;
+      }
     }
   }
 }
