added addToCart Func in itemList

--- a/src/styles/ItemList.module.scss
+++ b/src/styles/ItemList.module.scss
@@ -15,3 +15,10 @@
     justify-content: center;
   }
 }
+
+.popoverAdd {
+  margin: 10px 30px 15px;
+  padding: 10px 40px;
+  color: #fff;
+  background-color: #000;
+}
