--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -98,6 +98,9 @@ button {
 .MuiCardContent-root {
   padding-bottom: 0px !important;
 }
+.MuiImageList-root {
+  margin: -6px 20px 35px 10px !important;
+}
 
 // Loading Icon
 .MuiCircularProgress-colorPrimary {
