--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -101,6 +101,21 @@ button {
 .MuiImageList-root {
   margin: -6px 20px 35px 10px !important;
 }
+.MuiPopover-root .MuiPaper-elevation8 {
+  box-shadow: 0px 0px 0px -1px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0), 0px 3px 4px 2px rgba(0, 0, 0, 0.01) !important;
+}
+
+// Sign In/ Create Acc Modal
+.signinModal {
+  position: relative;
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
 
 // Loading Icon
 .MuiCircularProgress-colorPrimary {
