--- a/src/styles/ItemList.module.scss
+++ b/src/styles/ItemList.module.scss
@@ -22,3 +22,11 @@
   color: #fff;
   background-color: #000;
 }
+
+/* iPad Portrait and Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .list {
+    margin-right: 0 !important;
+    padding-bottom: 0 !important;
+  }
+}
