--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -63,8 +63,13 @@
   justify-content: center;
   align-items: center;
 
-  .icon {
-    margin: 5px 5px 10px 5px;
+  .userWelcomeMsg {
+    display: flex;
+    justify-content: center;
+
+    .icon {
+      margin: 12px 5px 10px 5px;
+    }
   }
 
   .signOut {
@@ -80,5 +85,13 @@
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
   .navbar {
     display: none;
+  }
+}
+
+/* iPad Portrait and Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .menu,
+  .menuSelected {
+    margin: 25px 10px 25px 15px !important;
   }
 }
