--- a/src/styles/Signin.module.scss
+++ b/src/styles/Signin.module.scss
@@ -31,22 +31,22 @@
   align-items: center;
 }
 
-.signin {
-  // margin: 0;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(255, 255, 255, 0.1)
-    ),
-    url("/assets/images/landing/landing_bg.jpg") fixed no-repeat center;
-  // position: relative;
-  // background-size: cover;
-  // min-height: 100vh;
+// .signin {
+//   // margin: 0;
+//   background: linear-gradient(
+//       rgba(255, 255, 255, 0.1),
+//       rgba(255, 255, 255, 0.1)
+//     ),
+//     url("/assets/images/landing/landing_bg.jpg") fixed no-repeat center;
+//   // position: relative;
+//   // background-size: cover;
+//   // min-height: 100vh;
 
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: flex-start;
-  // align-items: center;
-}
+//   // display: flex;
+//   // flex-direction: column;
+//   // justify-content: flex-start;
+//   // align-items: center;
+// }
 
 .card {
   width: 50%;
@@ -116,4 +116,11 @@
   top: 30%;
   transform: translate(-50%, -50%);
   box-shadow: 2px 5px 7px 3px rgba(0, 0, 0, 0.3);
+}
+
+/* iPad Portrait and Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .card {
+    width: 80% !important;
+  }
 }
