--- a/src/styles/categoryMenu.module.scss
+++ b/src/styles/categoryMenu.module.scss
@@ -6,9 +6,20 @@
   padding: 0 5px;
   margin-left: 15px;
   font-family: $custom-font !important;
+  // color: #ffffff;
+  height: fit-content;
+  background-color: #ffffff;
+  border-radius: 6px;
 }
 
 .menuSelected {
   text-decoration: none !important;
   background-color: rgba(0, 0, 0, 0.04) !important;
+}
+
+/* iPad Portrait and Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .list {
+    min-width: 160px !important;
+  }
 }
