--- a/src/styles/CartItemList.module.scss
+++ b/src/styles/CartItemList.module.scss
@@ -32,3 +32,27 @@
     }
   }
 }
+
+/* iPhone Plus Portrait and Landscape */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  .content {
+    width: 370px !important;
+    margin-top: 20px !important;
+
+    .close {
+      position: absolute !important;
+      top: 5px !important;
+      left: 5px !important;
+      z-index: 9999 !important;
+    }
+
+    img {
+      height: 200px !important;
+      width: auto !important;
+    }
+
+    .del {
+      margin-top: -10px !important;
+    }
+  }
+}
