--- a/src/styles/Checkout.module.scss
+++ b/src/styles/Checkout.module.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 
+.history,
 .checkout {
   max-width: 1200px;
   margin: 50px 120px;
@@ -80,4 +81,49 @@
   text-align: center;
   min-height: 100vh;
   padding: 100px;
+  color: #ffffff;
+}
+
+/* iPad Portrait and Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 1) {
+  .checkout {
+    margin: 50px !important;
+  }
+}
+
+/* iPhone Plus Portrait and Landscape */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  // Order History
+  .hitory,
+  .checkout {
+    margin: 50px 0 !important;
+
+    h1 {
+      margin-left: 25px !important;
+    }
+
+    .historyTable {
+      width: 150% !important;
+    }
+  }
+
+  .history .total {
+    width: 145% !important;
+  }
+
+  // Checkout
+  .checkout {
+    .title {
+      min-width: 200px !important;
+      padding-left: 15px !important;
+    }
+
+    img {
+      width: 85% !important;
+    }
+
+    .total button {
+      margin-right: 0 !important;
+    }
+  }
 }
