--- a/src/styles/ProductInfo.module.scss
+++ b/src/styles/ProductInfo.module.scss
@@ -39,7 +39,7 @@
 }
 
 /* iPad Portrait and Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 1) {
   .layout {
     margin-bottom: 30px !important;
 
@@ -51,5 +51,24 @@
 
   .suggestions {
     margin-bottom: 0px !important;
+  }
+  // .suggestionCards.MuiCard-root {
+  //   min-height: 420px !important;
+  // }
+}
+
+/* iPhone Plus Portrait and Landscape */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  .layout img {
+    height: 450px !important;
+  }
+
+  .layout .details {
+    margin-left: 1.5rem !important;
+  }
+
+  .suggestions {
+    margin: 25px 35px 80px !important;
+    overflow-x: hidden !important;
   }
 }
