--- a/src/styles/Signin.module.scss
+++ b/src/styles/Signin.module.scss
@@ -18,35 +18,25 @@
   }
 }
 
+@mixin flexColCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .signin,
 .success,
 .cardWrapper {
   margin: 0;
-  position: relative;
-  background-size: cover;
+  // position: relative;
+  // background-size: cover;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  @include flexColCenter();
   justify-content: flex-start;
-  align-items: center;
 }
-
-// .signin {
-//   // margin: 0;
-//   background: linear-gradient(
-//       rgba(255, 255, 255, 0.1),
-//       rgba(255, 255, 255, 0.1)
-//     ),
-//     url("/assets/images/landing/landing_bg.jpg") fixed no-repeat center;
-//   // position: relative;
-//   // background-size: cover;
-//   // min-height: 100vh;
-
-//   // display: flex;
-//   // flex-direction: column;
-//   // justify-content: flex-start;
-//   // align-items: center;
-// }
 
 .card {
   width: 50%;
@@ -67,9 +57,10 @@
   }
 
   .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    @include flexColCenter();
     padding: 15px 40px;
 
     .input {
@@ -81,8 +72,9 @@
 }
 
 .datePicker {
-  flex-direction: column;
-  align-items: center;
+  @include flexColCenter();
+  // flex-direction: column;
+  // align-items: center;
   animation: fadeIn 0.5s linear;
 
   input {
@@ -118,9 +110,62 @@
   box-shadow: 2px 5px 7px 3px rgba(0, 0, 0, 0.3);
 }
 
+// Profile
+.profile {
+  margin: 50px 120px;
+
+  .inputDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+
+    label {
+      margin: 10px 15px;
+    }
+  }
+
+  .inputCol {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    // align-items: flex-end;
+
+    input {
+      margin: 10px 15px;
+    }
+  }
+
+  .pInput {
+    outline: 0 !important;
+    border-width: 0 0 1px !important;
+  }
+
+  .err {
+    color: #ff5050;
+    font-size: 13px;
+    margin: 0 15px;
+  }
+}
+
 /* iPad Portrait and Landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   .card {
     width: 80% !important;
+  }
+
+  .profile .signin {
+    width: 550px !important;
+  }
+}
+
+/* iPhone Plus Portrait and Landscape */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  .profile {
+    margin: 50px 20px !important;
+
+    .signin {
+      width: 390px !important;
+      padding-left: 50px 20px !important;
+    }
   }
 }
