--- a/src/styles/ItemList.module.scss
+++ b/src/styles/ItemList.module.scss
@@ -1,4 +1,5 @@
-.list {
+.list,
+.suggestList {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -38,18 +39,26 @@
 }
 
 /* iPhone Plus Portrait and Landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+@media screen and (max-device-width: 736px), screen and (max-width: 736px) {
   .actions {
     button {
       padding: 12px 35px !important;
     }
   }
 
-  .list {
+  .list,
+  .suggestList {
     flex-wrap: nowrap !important;
-    width: 630px !important;
     overflow-x: hidden !important;
     margin-right: 0px !important;
+  }
+
+  .list {
+    width: fit-content !important;
+  }
+
+  .suggestList {
+    width: 630px !important;
   }
 
   .suggestionImgList div {
