--- a/src/styles/category.module.scss
+++ b/src/styles/category.module.scss
@@ -5,3 +5,10 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+/* iPhone Plus Portrait and Landscape */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  .mainContent {
+    flex-direction: column !important;
+  }
+}
