--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -86,13 +86,6 @@
   }
 }
 
-// FIXME: not working
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-  .navbar {
-    display: none;
-  }
-}
-
 /* iPad Portrait and Landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   .menu,
@@ -107,5 +100,16 @@
   .settings {
     margin-left: 12px !important;
     margin-right: 2px !important;
+  }
+}
+
+/* iPhone Plus Portrait and Landscape */
+@media screen and (max-device-width: 736px), screen and (max-width: 736px) {
+  .userWelcomeMsg {
+    display: none !important;
+  }
+
+  .logo {
+    left: 43% !important;
   }
 }
