--- a/src/styles/Signin.module.scss
+++ b/src/styles/Signin.module.scss
@@ -159,7 +159,26 @@
 }
 
 /* iPhone Plus Portrait and Landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+@media screen and (max-device-width: 736px), screen and (max-width: 736px) {
+  .card {
+    width: 90% !important;
+
+    .tabs {
+      // span {
+      //   left: 28px !important;
+      //   width: 150px !important;
+      // }
+
+      .tab {
+        width: 45% !important;
+      }
+    }
+
+    .form {
+      padding: 15px 0 !important;
+    }
+  }
+
   .profile {
     margin: 50px 20px !important;
 
