--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -113,3 +113,10 @@
     left: 43% !important;
   }
 }
+
+// iPhone 5/SE
+@media screen and (max-device-width: 320px), screen and (max-width: 320px) {
+  .menu {
+    margin: 25px 8px 25px 15px !important;
+  }
+}
