--- a/src/styles/Signin.module.scss
+++ b/src/styles/Signin.module.scss
@@ -188,3 +188,16 @@
     }
   }
 }
+
+// iPhone 5/SE
+@media screen and (max-device-width: 320px), screen and (max-width: 320px) {
+  // Signin
+  .cardWrapper {
+    min-height: 120vh !important;
+  }
+
+  // Profile
+  .profile .signin {
+    width: 308px !important;
+  }
+}
