--- a/src/styles/category.module.scss
+++ b/src/styles/category.module.scss
@@ -7,7 +7,7 @@
 }
 
 /* iPhone Plus Portrait and Landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+@media screen and (max-device-width: 736px), screen and (max-width: 736px) {
   .mainContent {
     flex-direction: column !important;
   }
