--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@200;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arima+Madurai");
 
 $custom-font: "Arima Madurai", cursive;
 
