--- a/src/styles/Checkout.module.scss
+++ b/src/styles/Checkout.module.scss
@@ -3,7 +3,7 @@
 .history,
 .checkout {
   max-width: 1200px;
-  margin: 50px 120px;
+  // margin: 50px 120px;
   font-size: 15px !important;
 
   .title {
