--- a/src/styles/ProductInfo.module.scss
+++ b/src/styles/ProductInfo.module.scss
@@ -6,6 +6,8 @@
 
   img {
     margin: 10px 15px;
+    width: 400px;
+    height: auto;
   }
 
   label {
@@ -40,7 +42,7 @@
 }
 
 /* iPad Portrait and Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 960px) and (-webkit-min-device-pixel-ratio: 1) {
   .layout {
     margin-bottom: 30px !important;
 
@@ -66,6 +68,7 @@
 @media screen and (max-device-width: 736px), screen and (max-width: 736px) {
   .layout img {
     height: 450px !important;
+    width: auto !important;
   }
 
   .layout .details {
@@ -74,7 +77,7 @@
 
   .suggestions {
     margin: 25px 35px 80px !important;
-    overflow-x: hidden !important;
+    overflow-x: scroll !important;
   }
 }
 
