--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,10 @@
 @import "./_variables.scss";
 
+:root {
+  --swiper-navigation-size: 30px !important;
+  --swiper-theme-color: rgb(147, 148, 147, 0.7) !important;
+}
+
 html,
 body {
   padding: 0;
@@ -45,10 +50,42 @@ button {
 }
 
 /*** Home Slick Slider ***/
-.slick-slider {
-  .slick-dots {
-    bottom: 20px !important;
-  }
+// .slick-slider {
+//   .slick-dots {
+//     bottom: 20px !important;
+//   }
+// }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /*** Material UI ***/
