--- a/src/styles/Checkout.module.scss
+++ b/src/styles/Checkout.module.scss
@@ -1,5 +1,10 @@
 @import "./variables";
 
+.checkout {
+  margin-top: 30px;
+  margin-left: 120px;
+}
+
 .history,
 .checkout {
   max-width: 1200px;
@@ -82,6 +87,7 @@
   min-height: 100vh;
   padding: 100px;
   color: #ffffff;
+  margin-left: 0;
 }
 
 /* iPad Portrait and Landscape */
