--- a/src/styles/ItemList.module.scss
+++ b/src/styles/ItemList.module.scss
@@ -27,6 +27,13 @@
   background-color: #000;
 }
 
+// @media only screen and (min-device-width: 1285px),
+//   screen and (min-width: 1285px) {
+//   .list {
+//     height: 100vh !important;
+//   }
+// }
+
 /* iPad Portrait and Landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 1) {
   .list {
