--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -87,8 +87,19 @@
   }
 }
 
+@media only screen and (min-device-width: 1285px),
+  screen and (min-width: 1285px) {
+  .icon {
+    margin: 32px 0px 10px 5px !important;
+  }
+}
+
 /* iPad Portrait and Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1023px) and (-webkit-min-device-pixel-ratio: 1) {
+  .userWelcomeMsg p {
+    flex-direction: column !important;
+  }
+
   .menu,
   .menuSelected {
     margin: 25px 10px 25px 15px !important;
